--- a/Formulaire.html
+++ b/Formulaire.html
@@ -149,25 +149,25 @@
                             <div class="row g-3">
                                 <div class="col-sm-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name" required>
+                                        <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name" >
                                         <label for="gname">Noms</label>
                                     </div>
                                 </div>
                                     <div class="col-sm-6">
                                         <div class="form-floating">
-                                            <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name" required>
+                                            <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name" >
                                             <label for="gname">Prenom</label>
                                         </div>
                                     </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email" required>
+                                        <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email" >
                                         <label for="gmail">Email</label>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="Type_P" placeholder="Child Name" required>
+                                        <input type="text" class="form-control border-0" id="Type_P" placeholder="Child Name" >
                                         <label for="cname">* Type de passeport</label>
                                     </div>
                             </div>
@@ -207,12 +207,18 @@
                                         <label for="cage">Portable</label>
                                     </div>
                                 </div>
-
-                                <div class="col-12">
-                                    <button class="btn btn-dark w-100 py-3" type="submit">Enregistrer</button>
+                            </form>  
                                 </div>
                             </div>
-                        </form>
+                            
+                            <form method="POST" action="https://form.jotform.com/232408207007547">
+                                <input type="hidden" name="parametre1" value="valeur1" />
+                                <input type="hidden" name="parametre2" value="valeur2" />
+                                <input type="hidden" name="parametre3" value="valeur3" />
+                                <input type="hidden" name="signature" value="signature"/>
+                                <input type="submit" name="payer" value="Enregistrer et payer"/>
+                            </form>
+                     
                     </div>
                 </div>
             </div>
