Revert "Add files via upload (#1)"
This reverts commit c08ade732867b83e2017a3498faff9307f4eff70.

--- a/Formulaire.html
+++ b/Formulaire.html
@@ -149,25 +149,25 @@
                             <div class="row g-3">
                                 <div class="col-sm-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name" >
+                                        <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name" required>
                                         <label for="gname">Noms</label>
                                     </div>
                                 </div>
                                     <div class="col-sm-6">
                                         <div class="form-floating">
-                                            <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name" >
+                                            <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name" required>
                                             <label for="gname">Prenom</label>
                                         </div>
                                     </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email" >
+                                        <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email" required>
                                         <label for="gmail">Email</label>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="Type_P" placeholder="Child Name" >
+                                        <input type="text" class="form-control border-0" id="Type_P" placeholder="Child Name" required>
                                         <label for="cname">* Type de passeport</label>
                                     </div>
                             </div>
@@ -207,18 +207,12 @@
                                         <label for="cage">Portable</label>
                                     </div>
                                 </div>
-                            </form>  
+
+                                <div class="col-12">
+                                    <button class="btn btn-dark w-100 py-3" type="submit">Enregistrer</button>
                                 </div>
                             </div>
-                            
-                            <form method="POST" action="https://form.jotform.com/232408207007547">
-                                <input type="hidden" name="parametre1" value="valeur1" />
-                                <input type="hidden" name="parametre2" value="valeur2" />
-                                <input type="hidden" name="parametre3" value="valeur3" />
-                                <input type="hidden" name="signature" value="signature"/>
-                                <input type="submit" name="payer" value="Enregistrer et payer"/>
-                            </form>
-                     
+                        </form>
                     </div>
                 </div>
             </div>
