--- a/Services.html
+++ b/Services.html
@@ -10,7 +10,7 @@
     <meta content="" name="description">
 
     <!-- logo du site -->
-    <link href="img/logoes.jpg" rel="icon">
+    <link href="img/emp.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,17 +46,17 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>211 Nyangwe, Lingwala, Kinshasa</small>
+                    <small>20 Bis av Barumbi, Kalamu, Kinshasa</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
-                    <small> Ouvert du lundi au samedi de 08.00 AM - 09.00 PM</small>
+                    <small> Ouvert du lundi au samedi de 09.00 AM - 09.00 PM</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small>+ 243 819 110 509 / 898 705 265</small>
+                    <small>+243 824 490 107</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-facebook-f"></i></a>
@@ -72,14 +72,15 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0"><i class="fa fa-avion text-primary me-2"></i>Emploi et service</h2>
+            <h2 class="m-0"><i class="fa fa-car text-primary me-2"></i>Emploi et service</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="Acceuil.html" class="nav-item nav-link">Acceuil</a>    
+                <a href="Acceuil.html" class="nav-item nav-link">Acceuil</a>
+                
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu bg-light m-0">
@@ -106,16 +107,9 @@
             <div class="container-xxl courses my-2 py-2 pb-0">
                 <div class="container">
                     <div class="text-center mx-auto mb-2 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
-                        <h1 class="display-6 mb-4">Certificat d'acceptation au Québec</h1>
+                        <h1 class="display-6 mb-4">Facilitation d'obtention de visa</h1>
+                        <h1 class="display-6 mb-4">Certificat d'acceptation au Quebec</h1>
                         <h1 class="display-6 mb-4">Autorisation au voyage électronique</h1>
-                        <h1 class="display-6 mb-4">Facilitation d'obtention de visa :</h1>
-                        <h1 class="display-6 mb-4">D'étude</h1>
-                        <h1 class="display-6 mb-4">D'affaires</h1>
-                        <h1 class="display-6 mb-4">De service</h1>
-                        <h1 class="display-6 mb-4">De tourisme</h1>
-                        <h1 class="display-6 mb-4">De conférence</h1>
-                        <h1 class="display-6 mb-4">Visite médicale</h1>
-                        <h1 class="display-6 mb-4">Visite & regroupement familliale</h1>
                     </div>
                 </div>
             </div>
@@ -161,80 +155,140 @@
     <!-- Fin de nos services -->
 
 
-  <!-- Bas de page -->
-  <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
-    <div class="container">
-        <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
-                <h4 class="text-white mb-4">Cabinet de Consulting et de Coaching par excellence</h4>
-                <h2 class="text-primary mb-4"><i class="fa fa-avion text-white me-0"></i>Emploi & Services</h2>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Kinshasa</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265</p>
-                <p class="mb-2"><i class="fa fa-envelope me-2"></i>emploietservices@gmail.com</p>
-            </div>
-            <div class="col-lg-3 col-md-5">
-                <h4 class="text-light mb-4">...</h4>
-            <a href="contact.html" class="btn btn-link" href="">Contact</a>
-            <a href="Services.html" class="btn btn-link" href="">Autres services</a>
-            <a href="Apropos.html" class="btn btn-link" href="">A Propos</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
-            </div>
-            <div class="col-lg-3 col-md-6">
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <form action="">
-                    <div class="input-group">
-                        <button class="btn btn-primary">Cliquez ici pour vous inscrire <a href="Formulaire.html" class="nav-item nav-link"></a></button>
+    <!-- Features Start -->
+    <div class="container-xxl py-6">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <h6 class="text-primary text-uppercase mb-2">L'agence de proximitée</h6>
+                    <h1 class="display-6 mb-4">L'agence qui vous donne le Visa dans un delais hors concurent.</h1>
+                    <p class="mb-5">Ici nous allons donner une précision nette sur l'agence</p>
+                    <div class="row gy-5 gx-4">
+                        <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="flex-shrink-0 btn-square bg-primary me-3">
+                                    <i class="fa fa-check text-white"></i>
+                                </div>
+                                <h5 class="mb-0">Visa d'étude</h5>
+                            </div>
+                            <span>Mot du directeur sur ce Visa</span>
+                        </div>
+                        <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="flex-shrink-0 btn-square bg-primary me-3">
+                                    <i class="fa fa-check text-white"></i>
+                                </div>
+                                <h5 class="mb-0">Visa tourisme</h5>
+                            </div>
+                            <span>Mot du directeur sur ce Visa</span>
+                        </div>
+                        <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="flex-shrink-0 btn-square bg-primary me-3">
+                                    <i class="fa fa-check text-white"></i>
+                                </div>
+                                <h5 class="mb-0">Visa maladie</h5>
+                            </div>
+                            <span>Mot du directeur sur ce Visa</span>
+                        </div>
+                        <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="flex-shrink-0 btn-square bg-primary me-3">
+                                    <i class="fa fa-check text-white"></i>
+                                </div>
+                                <h5 class="mb-0">Visa visiteur</h5>
+                            </div>
+                            <span>Mot du directeur sur ce Visa</span>
+                        </div>
                     </div>
-                </form>
-                <h6 class="text-white mt-4 mb-3">Ecrivez-nous</h6>
-                <div class="d-flex pt-2">
-                    <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-whatsapp"></i></a>
+                </div>
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="position-relative overflow-hidden pe-5 pt-5 h-500" style="min-height: 500px;">
+                        <img class="position-absolute w-100 h-100" src="img/Ma1.jpg" alt="" style="object-fit: cover;">
+                        <img class="position-absolute top-0 end-0 bg-white ps-3 pb-3" src="img/Ma2.jpg" alt="" style="width: 200px; height: 200px">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <!-- Features End -->
 
 
-<!-- Footer End -->
-
-
-<!-- Début de la signature -->
-<div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                &copy; <a href="#">Toutkin</a>, 2023
+    <!-- Bas de page -->
+    <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-4">Votre agences de proximitée</h4>
+                    <h2 class="text-primary mb-4"><i class="fa fa-avion text-white me-0"></i>Emploi & Services</h2>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Kinshasa</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-2"></i>emploietservices@gmail.com</p>
+                </div>
+                <div class="col-lg-3 col-md-5">
+                    <h4 class="text-light mb-4">...</h4>
+                <a href="contact.html" class="btn btn-link" href="">Contact</a>
+                <a href="Services.html" class="btn btn-link" href="">Autres services</a>
+                <a href="Apropos.html" class="btn btn-link" href="">A Propos</a>
+                <a class="btn btn-link" href="">Terms & Condition</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-light mb-4">Inscription</h4>
+                    <form action="">
+                        <div class="input-group">
+                            <input type="text" class="form-control p-3 border-0" placeholder="Votre adresse email">
+                            <button class="btn btn-primary">Envoyer</button>
+                        </div>
+                    </form>
+                    <h6 class="text-white mt-4 mb-3">Ecrivez-nous</h6>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-whatsapp"></i></a>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6 text-center text-md-end">
-                <br>Designed By : <a href="">Merdi MOKE</a>
-                <br>Distributed By : <a href="" target="_blank">Merdi MOKE</a>
         </div>
     </div>
-</div>
-</div>
-<!-- Fin de la signature -->
+    <!-- Footer End -->
 
 
-<!-- Back to Top -->
-<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <!-- Copyright Start -->
+    <div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    &copy; <a href="#">Toutkin</a>, 2023
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                    Designed By <a href="https://htmlcodex.com">Merdi MOKE</a>
+                    <br>Distributed By: <a href="https://themewagon.com" target="_blank">Merdi MOKE</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Copyright -->
 
 
-<!-- Librairie de JavaScript -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="lib/wow/wow.min.js"></script>
-<script src="lib/easing/easing.min.js"></script>
-<script src="lib/waypoints/waypoints.min.js"></script>
-<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-<!-- Template Javascript -->
-<script src="js/main.js"></script>
+
+    <!-- Librairie de JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
