--- a/Temoignage.html
+++ b/Temoignage.html
@@ -10,7 +10,7 @@
     <meta content="" name="description">
 
     <!-- logo du site -->
-    <link href="img/logoes.jpg" rel="icon">
+    <link href="img/emp.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,17 +45,17 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>211 Nyangwe, Lingwala, Kinshasa</small>
+                    <small>20 Bis av Barumbi, Kalamu, Kinshasa</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
-                    <small> Ouvert du lundi au samedi de 08.00 AM - 09.00 PM</small>
+                    <small> Ouvert du lundi au samedi de 09.00 AM - 09.00 PM</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small>+ 243 819 110 509 / 898 705 265</small>
+                    <small>+243 824 490 107</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-facebook-f"></i></a>
@@ -72,7 +72,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0"><i class="fa fa-avion text-primary me-2"></i>Emploi et service</h2>
+            <h2 class="m-0"><i class="fa fa-car text-primary me-2"></i>Emploi et service</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -100,18 +100,18 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-6 my-6 mt-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center">
-            <h1 class="display-4 text-white animated slideInDown mb-4">...</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4">Témoignages</h1>
         </div>
     </div>
     <!-- Page Header End -->
 
 
-    <!-- temoigange début -->
+    <!-- Testimonial Start -->
     <div class="container-xxl py-6">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
                 <h1 class="text-primary text-uppercase mb-2">Témoignages</h1>
-                <h1 class="display-6 mb-4">Qu'est-ce qu'ils disent sur nous ?</h1>
+                <h1 class="display-6 mb-4">Que ce qu'ils disent sur nous ?</h1>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
@@ -127,7 +127,6 @@
                             <hr class="w-25 mx-auto">
                             <h5>Chadrack KABANDULA</h5>
                             <span>Photographe</span>
-                            <p class="mb-4">Suivre l'intégralité de son témoignage en <a href="https://www.youtube.com">cliquant Ici</a>.</p>
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
@@ -140,7 +139,6 @@
                             <hr class="w-25 mx-auto">
                             <h5>Ma. Régine BAWE</h5>
                             <span>Client satisfait</span>
-                            <p class="mb-4">Suivre l'intégralité de son témoignage en <a href="https://www.youtube.com">cliquant Ici</a>.</p>
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
@@ -153,14 +151,13 @@
                             <hr class="w-25 mx-auto">
                             <h5>Chérubin MALUMA</h5>
                             <span>Etudiant satisfait</span>
-                            <p class="mb-4">Suivre l'intégralité de son témoignage en <a href="https://www.youtube.com">cliquant Ici</a>.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-<!-- Témoignage fin -->
+    <!-- Testimonial End -->
 
 
     <!-- Features Start -->
@@ -222,80 +219,81 @@
     <!-- Features End -->
 
 
-  <!-- Bas de page -->
-  <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
-    <div class="container">
-        <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
-                <h4 class="text-white mb-4">Cabinet de Consulting et de Coaching par excellence</h4>
-                <h2 class="text-primary mb-4"><i class="fa fa-avion text-white me-0"></i>Emploi & Services</h2>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Kinshasa</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265</p>
-                <p class="mb-2"><i class="fa fa-envelope me-2"></i>emploietservices@gmail.com</p>
-            </div>
-            <div class="col-lg-3 col-md-5">
-                <h4 class="text-light mb-4">...</h4>
-            <a href="contact.html" class="btn btn-link" href="">Contact</a>
-            <a href="Services.html" class="btn btn-link" href="">Autres services</a>
-            <a href="Apropos.html" class="btn btn-link" href="">A Propos</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
-            </div>
-            <div class="col-lg-3 col-md-6">
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <form action="">
-                    <div class="input-group">
-                        <button class="btn btn-primary">Cliquez ici pour vous inscrire <a href="Formulaire.html" class="nav-item nav-link"></a></button>
+    <!-- Bas de page -->
+    <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-4">Votre agences de proximitée</h4>
+                    <h2 class="text-primary mb-4"><i class="fa fa-avion text-white me-0"></i>Emploi & Services</h2>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Kinshasa</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-2"></i>emploietservices@gmail.com</p>
+                </div>
+                <div class="col-lg-3 col-md-5">
+                    <h4 class="text-light mb-4">...</h4>
+                <a href="contact.html" class="btn btn-link" href="">Contact</a>
+                <a href="Services.html" class="btn btn-link" href="">Autres services</a>
+                <a href="Apropos.html" class="btn btn-link" href="">A Propos</a>
+                <a class="btn btn-link" href="">Terms & Condition</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-light mb-4">Inscription</h4>
+                    <form action="">
+                        <div class="input-group">
+                            <input type="text" class="form-control p-3 border-0" placeholder="Votre adresse email">
+                            <button class="btn btn-primary">Envoyer</button>
+                        </div>
+                    </form>
+                    <h6 class="text-white mt-4 mb-3">Ecrivez-nous</h6>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-whatsapp"></i></a>
                     </div>
-                </form>
-                <h6 class="text-white mt-4 mb-3">Ecrivez-nous</h6>
-                <div class="d-flex pt-2">
-                    <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <!-- Footer End -->
 
 
-<!-- Footer End -->
-
-
-<!-- Début de la signature -->
-<div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                &copy; <a href="#">Toutkin</a>, 2023
+    <!-- Copyright Start -->
+    <div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    &copy; <a href="#">Toutkin</a>, 2023
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                    Designed By <a href="https://htmlcodex.com">Merdi MOKE</a>
+                    <br>Distributed By: <a href="https://themewagon.com" target="_blank">Merdi MOKE</a>
+                </div>
             </div>
-            <div class="col-md-6 text-center text-md-end">
-                <br>Designed By : <a href="">Merdi MOKE</a>
-                <br>Distributed By : <a href="" target="_blank">Merdi MOKE</a>
         </div>
     </div>
-</div>
-</div>
-<!-- Fin de la signature -->
+    <!-- Copyright -->
 
 
-<!-- Back to Top -->
-<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
-<!-- Librairie de JavaScript -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="lib/wow/wow.min.js"></script>
-<script src="lib/easing/easing.min.js"></script>
-<script src="lib/waypoints/waypoints.min.js"></script>
-<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <!-- Librairie de JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-<!-- Template Javascript -->
-<script src="js/main.js"></script>
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
