--- a/Formulaire.html
+++ b/Formulaire.html
@@ -84,8 +84,8 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="Services.html" class="dropdown-item">Voyage</a>
-                        <a href="Gardinage.html" class="dropdown-item">Gardinage</a>
-                        <a href="Securite.html" class="dropdown-item">Sécurité</a>
+                    <!--    <a href="Gardinage.html" class="dropdown-item">Gardinage</a>
+                            <a href="Securite.html" class="dropdown-item">Sécurité</a> -->
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -138,14 +138,14 @@
             </button>
         </div>
     </div>
+</div>
     <!-- Fin de la partie animation -->
 
-                <div class="col-lg-8 my-6 mb-0 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="bg-primary text-center p-5">
-                        <h1 class="mb-4">Formulaire d'Inscription</h1>
+                <div class="col-lg-8 my-6 mb-0 wow fadeInUp" data-wow-delay="0.1s" position:absolute; top:100px>
+                    <div class="bg-primary text-center p-5" position:absolute; top:100px>
+                        <h1 class="mb-4">Formulaire d'inscription</h1 position:absolute; top:100px>
                         <form>
-                            <div>
-                               
+                            <div>  
                             <div class="row g-3">
                                 <div class="col-sm-6">
                                     <div class="form-floating">
@@ -168,7 +168,7 @@
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control border-0" id="Type_P" placeholder="Child Name" >
-                                        <label for="cname">* Type de passeport</label>
+                                        <label for="cname">Sexe</label>
                                     </div>
                             </div>
                                 <div class="col-sm-6">
@@ -186,25 +186,25 @@
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control border-0" id="sexe" placeholder="Child Age">
-                                        <label for="cage">Sexe</label>
+                                        <label for="cage">Type de passeport</label>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control border-0" id="Date" placeholder="Child Age">
-                                        <label for="cage">Date de naissance</label>
+                                        <label for="cage">Validité de passeport</label>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control border-0" id="Adresse" placeholder="Child Age">
-                                        <label for="cage">Adresse</label>
+                                        <label for="cage">Portable</label>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control border-0" id="Num_P" placeholder="Child Age">
-                                        <label for="cage">Portable</label>
+                                        <label for="cage">Adresse complete</label>
                                     </div>
                                 </div>
                             </form>  
