--- a/Services.html
+++ b/Services.html
@@ -72,7 +72,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0"><i class="fa fa-avion text-primary me-2"></i>Emploi et service</h2>
+            <h2 class="m-0"><i class="fa fa-plane text-primary me-2"></i>Emploi et service</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -83,9 +83,9 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="Services.html" class="dropdown-item active">Voyage</a>
-                        <a href="Gardinage.html" class="dropdown-item">Gardinage</a>
-                        <a href="Securite.html" class="dropdown-item">Sécurité</a>
+                        <a href="Services.html" class="dropdown-item">Voyage</a>
+                        <!--    <a href="Gardinage.html" class="dropdown-item">Gardinage</a>
+                             <a href="Securite.html" class="dropdown-item">Sécurité</a> -->
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -99,15 +99,17 @@
     <!-- Partie services -->
     <div class="container-fluid page-header py-2 my-2 mt-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center">
-            <h1 class="display-4 text-white animated slideInDown mb-4">NOS SERVICES</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4">Nos services</h1>
         </div>
     </div>
     <!--Detail de nos servies -->
             <div class="container-xxl courses my-2 py-2 pb-0">
                 <div class="container">
-                    <div class="text-center mx-auto mb-2 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
-                        <h1 class="display-6 mb-4">Certificat d'acceptation au Québec</h1>
-                        <h1 class="display-6 mb-4">Autorisation au voyage électronique</h1>
+                    <div class="text-center mx-auto mb-2 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 2000px;">
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/Se.jpg" alt="">
+                        </div>
+                
                         <h1 class="display-6 mb-4">Facilitation d'obtention de visa :</h1>
                         <h1 class="display-6 mb-4">D'étude</h1>
                         <h1 class="display-6 mb-4">D'affaires</h1>
@@ -116,6 +118,8 @@
                         <h1 class="display-6 mb-4">De conférence</h1>
                         <h1 class="display-6 mb-4">Visite médicale</h1>
                         <h1 class="display-6 mb-4">Visite & regroupement familliale</h1>
+                        <h1 class="display-6 mb-4">Certificat d'acceptation au Québec</h1>
+                        <h1 class="display-6 mb-4">Autorisation au voyage électronique</h1>
                     </div>
                 </div>
             </div>
@@ -167,7 +171,7 @@
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-white mb-4">Cabinet de Consulting et de Coaching par excellence</h4>
-                <h2 class="text-primary mb-4"><i class="fa fa-avion text-white me-0"></i>Emploi & Services</h2>
+                <h2 class="text-primary mb-4"><i class="fa fa-plane text-white me-0"></i> Emploi & Services</h4>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Kinshasa</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265</p>
                 <p class="mb-2"><i class="fa fa-envelope me-2"></i>emploietservices@gmail.com</p>
