--- a/Temoignage.html
+++ b/Temoignage.html
@@ -72,7 +72,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0"><i class="fa fa-avion text-primary me-2"></i>Emploi et service</h2>
+            <h2 class="m-0"><i class="fa fa-plane text-primary me-2"></i>Emploi et service</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -84,8 +84,8 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="Services.html" class="dropdown-item">Voyage</a>
-                        <a href="Gardinage.html" class="dropdown-item">Gardinage</a>
-                        <a href="Securite.html" class="dropdown-item">Sécurité</a>
+                    <!--    <a href="Gardinage.html" class="dropdown-item">Gardinage</a>
+                            <a href="Securite.html" class="dropdown-item">Sécurité</a> -->
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
