--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0"><i class="fa fa-avion text-primary me-2"></i>Emploi et service</h2>
+            <h2 class="m-0"><i class="fa fa-plane text-primary me-2"></i>Emploi et service</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -84,8 +84,8 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="Services.html" class="dropdown-item">Voyage</a>
-                        <a href="Gardinage.html" class="dropdown-item">Gardinage</a>
-                        <a href="Securite.html" class="dropdown-item">Sécurité</a>
+                    <!--    <a href="Gardinage.html" class="dropdown-item">Gardinage</a>
+                            <a href="Securite.html" class="dropdown-item">Sécurité</a> -->
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
@@ -104,16 +104,18 @@
         </div>
     </div>
 
+
     <!-- Contact Start -->
     <div class="container-xxl py-6">
         <div class="container">
             <div class="row g-5">
-                        <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>   
-                    </div>
-                </div>
+                <iframe class="position-relative w-100 h-100"
+                    src="https://maps.google.com/maps?hl=en&amp;q=211 Nyangwe, Lingwala, Kinshasa+(undefined)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                    frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0">
+                </iframe>
+            </div>
+            </div>
                 
                     <h6 class="text-primary text-uppercase mb-2">Contact</h6>
                     <h1 class="display-6 mb-4">Laissez nous un message</h1>
@@ -145,7 +147,7 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary py-3 px-5" a  href="malito:emploietservices@gmail.com" type="submit">Envoyer message </a></p> </button>
+                                <button class="btn btn-primary py-3 px-5" a href="malito:contacteremploietservices@gmail.com" type="submit">Envoyer message </a></p> </button>
                             </div>
                         </div>
                     </form>
@@ -170,7 +172,7 @@
                                 <div class="flex-shrink-0 btn-square bg-primary me-3">
                                     <i class="fa fa-check text-white"></i>
                                 </div>
-                                <h5 class="mb-0">Visa d'étude</h5>
+                                <h5 class="mb-0">Visa de régroupement familliale</h5>
                             </div>
                             <span>Mot du directeur sur ce Visa</span>
                         </div>
@@ -178,28 +180,7 @@
                             <div class="d-flex align-items-center mb-3">
                                 <div class="flex-shrink-0 btn-square bg-primary me-3">
                                     <i class="fa fa-check text-white"></i>
-                                </div>
-                                <h5 class="mb-0">Visa tourisme</h5>
-                            </div>
-                            <span>Mot du directeur sur ce Visa</span>
-                        </div>
-                        <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="flex-shrink-0 btn-square bg-primary me-3">
-                                    <i class="fa fa-check text-white"></i>
-                                </div>
-                                <h5 class="mb-0">Visa maladie</h5>
-                            </div>
-                            <span>Mot du directeur sur ce Visa</span>
-                        </div>
-                        <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="flex-shrink-0 btn-square bg-primary me-3">
-                                    <i class="fa fa-check text-white"></i>
-                                </div>
-                                <h5 class="mb-0">Visa visiteur</h5>
-                            </div>
-                            <span>Mot du directeur sur ce Visa</span>
+                               
                         </div>
                     </div>
                 </div>
