--- a/Acceuil.html
+++ b/Acceuil.html
@@ -241,8 +241,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="courses-item d-flex flex-column bg-white overflow-hidden h-100">
                         <div class="text-center p-4 pt-0">
-
-                            
+    
                             <h5 class="mb-3">Facilitation passeport</h5>
                             <p>Pour une durée maximum de 3 à 7 jours</p>
                             <ol class="breadcrumb justify-content-center mb-0">
@@ -253,7 +252,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/Pho.jpg" alt="">
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href=""> <a href="https://wa.me/+243819110509?text=urlencodedtext" href="">Lire plus</a>
+                                <a class="btn btn-outline-primary border-2" href=""> <a href="https://wa.me/+243819110509?text=Monsieur, Ayant pour projet de faire un passeport, je me permets de vous contacter afin d'obtenir de plus amples renseignements sur le prix de passeport" href="">Lire plus</a>
                             </div>
                         </div>
                     </div>
@@ -454,7 +453,11 @@
                         <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-square btn-outline-light me-0" href="https://wa.me/+243819110509?text=Quoi faire pour vous ?" class="fab fa-whatsapp"></i></a>
+                    </div>
+                    <h6 class="text-white mt-4 mb-3">Nous acceptons</h6>
+                    <div class="d-flex pt-2">
+                        <img class="img-fluid" src="img/Paie0.jpg" alt="">
                     </div>
                     </div>
                 </div>
