--- a/Temoignage.html
+++ b/Temoignage.html
@@ -256,6 +256,10 @@
                     <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-whatsapp"></i></a>
                 </div>
+                <h6 class="text-white mt-4 mb-3">Nous acceptons</h6>
+                    <div class="d-flex pt-2">
+                    <img class="img-fluid" src="img/Paie0.jpg" alt="">
+                    </div>
             </div>
         </div>
     </div>
