--- a/contact.html
+++ b/contact.html
@@ -174,20 +174,21 @@
                                 </div>
                                 <h5 class="mb-0">Visa de régroupement familliale</h5>
                             </div>
-                            <span>Mot du directeur sur ce Visa</span>
+                            
                         </div>
+                    </div>
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
                             <div class="d-flex align-items-center mb-3">
                                 <div class="flex-shrink-0 btn-square bg-primary me-3">
                                     <i class="fa fa-check text-white"></i>
-                               
+                                </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="position-relative overflow-hidden pe-5 pt-5 h-500" style="min-height: 500px;">
+                    <div class="position-relative overflow-hidden pe-5 pt-5 h-500" style="min-height: 550px;">
                         <img class="position-absolute w-100 h-100" src="img/Ma1.jpg" alt="" style="object-fit: cover;">
-                        <img class="position-absolute top-0 end-0 bg-white ps-3 pb-3" src="img/Ma2.jpg" alt="" style="width: 200px; height: 200px">
+                        <img class="position-absolute top-0 end-0 bg-white ps-3 pb-3" src="img/Ma2.jpg" alt="" style="width: 150px; height: 200px">
                     </div>
                 </div>
             </div>
@@ -229,6 +230,11 @@
                     <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
                     <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-whatsapp"></i></a>
+                </div>
+                <h6 class="text-white mt-4 mb-3">Nous acceptons</h6>
+                    <div class="d-flex pt-2">
+                    <img class="img-fluid" src="img/Paie0.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
