--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
-                    <small> Ouvert du lundi au samedi de 08.00 AM - 09.00 PM</small>
+                    <small> Ouvert du lundi au samedi de 08.00 AM - 04.00 PM</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -172,9 +172,8 @@
                                 <div class="flex-shrink-0 btn-square bg-primary me-3">
                                     <i class="fa fa-check text-white"></i>
                                 </div>
-                                <h5 class="mb-0">Visa de régroupement familliale</h5>
+                                <h5 class="mb-0">Nous traitons tout les dossiers avec la meme énérgie;</h5>
                             </div>
-                            
                         </div>
                     </div>
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
@@ -182,6 +181,7 @@
                                 <div class="flex-shrink-0 btn-square bg-primary me-3">
                                     <i class="fa fa-check text-white"></i>
                                 </div>
+                                <h5 class="mb-0">Un client satisfait, est un témoignage parfait;</h5>
                         </div>
                     </div>
                 </div>
@@ -225,11 +225,10 @@
                 </form>
                 <h6 class="text-white mt-4 mb-3">Ecrivez-nous</h6>
                 <div class="d-flex pt-2">
-                    <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-whatsapp"></i></a>
+                    <a class="btn btn-square btn-outline-light me-1" href="https://www.facebook.com/profile.php?id=61550810019498&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square btn-outline-light me-1" href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square btn-outline-light me-1" href="https://www.tiktok.com/tag/emploietservices%E2%9D%A4%EF%B8%8F%F0%9F%87%A8%F0%9F%87%A9%F0%9F%87%A8%F0%9F%87%AC%F0%9F%87%A8%F0%9F%87%BA%F0%9F%87%A7%F0%9F%87%AA%F0%9F%87%A8%F0%9F%87%A6%F0%9F%87%A8%F0%9F%87%AC%F0%9F%87%A8%F0%9F%87%B3%E2%9C%85"><i class="fab.fa-tiktok"></i></a>
+                    <a class="btn btn-square btn-outline-light me-1" href="https://wa.me/+243819110509?"><i class="fab fa-whatsapp"></i></a>
                 </div>
                 <h6 class="text-white mt-4 mb-3">Nous acceptons</h6>
                     <div class="d-flex pt-2">
