--- a/Acceuil.html
+++ b/Acceuil.html
@@ -91,6 +91,7 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                 <a href="temoignage.html" class="nav-item nav-link">Témoignages</a>
                 <a href="Apropos.html" class="nav-item nav-link">A propos</a>
+                <a href="Connexion.html" class="nav-item nav-link">Connexion</a>
             </div>
         </div>
     </nav>
@@ -435,6 +436,8 @@
                 <a href="Services.html" class="btn btn-link" href="">Autres services</a>
                 <a href="Apropos.html" class="btn btn-link" href="">A Propos</a>
                 <a class="btn btn-link" href="">Terms & Condition</a>
+                <a class=""
+                download="tk.txt"></a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                 </div>
