--- a/Apropos.html
+++ b/Apropos.html
@@ -92,6 +92,7 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                 <a href="Temoignage.html" class="nav-item nav-link">Témoignages</a>
                 <a href="Apropos.html" class="nav-item nav-link active">A propos</a>
+                <a href="Connexion.html" class="nav-item nav-link">Connexion</a>
             </div>
                 </div>
             </div>
