--- a/Temoignage.html
+++ b/Temoignage.html
@@ -91,7 +91,7 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                 <a href="Temoignage.html" class="nav-item nav-link active">Témoignages</a>
                 <a href="Apropos.html" class="nav-item nav-link">A propos</a>
-                
+                <a href="Connexion.html" class="nav-item nav-link">Connexion</a>
             </div>
     </nav>
     <!-- Navbar End -->
