--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
                 <a href="temoignage.html" class="nav-item nav-link">Témoignages</a>
                 <a href="Apropos.html" class="nav-item nav-link">A propos</a>
-                
+                <a href="Connexion.html" class="nav-item nav-link">Connexion</a>
             </div>
         </div>
     </nav>
