--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,14 @@
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
+                    <div class="user_option_box">
+                        <a href="Connexion.html" class="nav-item nav-link">
+                          <i class="fa fa-user" aria-hidden="true"></i>
+                          <span>
+                            Connexion
+                          </span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -91,7 +99,7 @@
                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
                 <a href="temoignage.html" class="nav-item nav-link">Témoignages</a>
                 <a href="Apropos.html" class="nav-item nav-link">A propos</a>
-                <a href="Connexion.html" class="nav-item nav-link">Connexion</a>
+        <!--    <a href="Connexion.html" class="nav-item nav-link">Connexion</a>   -->
             </div>
         </div>
     </nav>
@@ -117,7 +125,7 @@
             </div>
             </div>
                 
-                    <h6 class="text-primary text-uppercase mb-2">Contact</h6>
+                <!-- <h6 class="text-primary text-uppercase mb-2">Contact</h6>    -->
                     <h1 class="display-6 mb-4">Laissez nous un message</h1>
                     <p class="mb-4">Prière de bien remplir le formulaire ou cliquez ici pour <a href="Formulaire.html" class="nav-item nav-link">Voir le formulaire</a>.</p>
                     <form>
