--- a/Temoignage.html
+++ b/Temoignage.html
@@ -62,10 +62,18 @@
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
+                    <div class="user_option_box">
+                        <a href="Connexion.html" class="nav-item nav-link">
+                          <i class="fa fa-user" aria-hidden="true"></i>
+                          <span>
+                            Connexion
+                          </span>
+                        </a>
                 </div>
             </div>
         </div>
     </div>
+</div>
     <!-- Fin de l'en-tete -->
 
 
@@ -91,7 +99,7 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                 <a href="Temoignage.html" class="nav-item nav-link active">Témoignages</a>
                 <a href="Apropos.html" class="nav-item nav-link">A propos</a>
-                <a href="Connexion.html" class="nav-item nav-link">Connexion</a>
+                <!--  <a href="Connexion.html" class="nav-item nav-link">Connexion</a>    -->
             </div>
     </nav>
     <!-- Navbar End -->
